<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="obj"
            type="com.example.vymoassignment.screen.prlist.models.PrResponseItem"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width = "match_parent"
        app:cardCornerRadius = "4dp"
        android:layout_margin = "5dp"
        app:contentPadding="5dp"
        android:layout_height = "wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtPullTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:text="@string/pull_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:text="@{obj.title}"
                app:layout_constraintTop_toTopOf="@+id/txtPullTitle"
                app:layout_constraintLeft_toRightOf="@+id/txtPullTitle"
                android:textSize="16dp"
                />
            <TextView
            android:id="@+id/txtPullNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/pull_number"
            app:layout_constraintTop_toBottomOf="@+id/txtPullTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="16dp"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:text="@{Integer.toString(obj.id)}"
                app:layout_constraintTop_toTopOf="@+id/txtPullNumber"
                app:layout_constraintLeft_toRightOf="@+id/txtPullNumber"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/txtPullStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:text="@string/pull_status"
                app:layout_constraintTop_toBottomOf="@+id/txtPullNumber"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                app:statusText="@{obj.state}"
                android:textAllCaps="true"
                android:drawablePadding="2dp"
                app:layout_constraintTop_toTopOf="@+id/txtPullStatus"
                app:layout_constraintLeft_toRightOf="@+id/txtPullStatus"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/txtCreatedOn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:text="@string/created"
                app:layout_constraintTop_toBottomOf="@+id/txtPullStatus"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                app:createdTxt="@{obj.created_at}"
                app:layout_constraintTop_toTopOf="@+id/txtCreatedOn"
                app:layout_constraintLeft_toRightOf="@+id/txtCreatedOn"
                android:textSize="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
